--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,6 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-attrs==25.1.0
-blinker==1.9.0
-cachetools==5.5.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-distro==1.9.0
-eval_type_backport==0.2.2
-faiss-cpu==1.10.0
-filelock==3.17.0
-frozenlist==1.5.0
-fsspec==2025.2.0
-gitdb==4.0.12
-GitPython==3.1.44
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.28.1
-idna==3.10
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langchain==0.3.17
-langchain-core==0.3.33
-langchain-text-splitters==0.3.5
-langsmith==0.3.6
-lxml==5.3.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mistralai==1.5.0
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-narwhals==1.25.1
-networkx==3.4.2
-numpy==2.2.2
-openai==1.61.1
-orjson==3.10.15
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-propcache==0.2.1
-protobuf==5.29.3
-pyarrow==19.0.0
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-pytz==2025.1
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.22.3
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-sentence-transformers==3.4.1
-setuptools==75.8.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==2.0.37
-streamlit==1.42.0
-sympy==1.13.1
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-toml==0.10.2
-torch==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.48.2
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-wheel==0.45.1
-yarl==1.18.3
-zstandard==0.23.0
+streamlit
+subprocess
+spacy
+sklearn
+pandas
+sentence-transformers
